# pos

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_now.ps1  cmake_log.txt  do_build.bat  do_build.ps1  extract_menu.py  fix_encoding.py  full_build_log.txt  import_products.py  menu_log.txt  read_excel.py  rebuild.bat  verbose_build.txt
resources/: resources.qrc
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  DatabaseSchema.sql
src/devices/: CashDrawer.cpp  CashDrawer.h  ZKDevice.cpp  ZKDevice.h
src/models/: Customer.h  Invoice.h  Product.cpp  Product.h  User.h
src/styles/: theme.qss
src/utils/: ZatcaQR.cpp  ZatcaQR.h
src/views/: AttendanceWidget.cpp  AttendanceWidget.h  BookingWidget.cpp  BookingWidget.h  CustomersWidget.cpp  CustomersWidget.h  DashboardWidget.cpp  DashboardWidget.h  DeviceSettingsWidget.cpp  DeviceSettingsWidget.h  EmployeesWidget.cpp  EmployeesWidget.h  ExpensesWidget.cpp  ExpensesWidget.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MaintenanceWidget.cpp  MaintenanceWidget.h  ProductsWidget.cpp  ProductsWidget.h  PurchaseReturnsWidget.cpp  PurchaseReturnsWidget.h  PurchasesWidget.cpp  PurchasesWidget.h  ReportsWidget.cpp  ReportsWidget.h  SalaryWidget.cpp  SalaryWidget.h  SalesReturnsWidget.cpp  SalesReturnsWidget.h  SalesWidget.cpp  SalesWidget.h  SettingsWidget.cpp  SettingsWidget.h  StockTransferWidget.cpp  StockTransferWidget.h  StockWidget.cpp  StockWidget.h  (+4 more)
src/widgets/: InvoiceTable.cpp  InvoiceTable.h  SearchBar.cpp  SearchBar.h  SidebarWidget.cpp  SidebarWidget.h  StatCard.cpp  StatCard.h
